# orcapod

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO  docker-compose.yaml  test_script.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/gpu/: Dockerfile  devcontainer.json
.github/workflows/: cargo_test.yaml  tests.yaml
src/: error.rs  filestore.rs  lib.rs  main.rs  model.rs  orca.rs  store.rs  util.rs  utils.rs
src/store/: filestore.rs  mod.rs
tests/: model.rs  model_test.rs  store.rs
tests/fixture/: mod.rs
